Fixed mobile card width by removing align-items from main tag

--- a/css/main.scss
+++ b/css/main.scss
@@ -43,6 +43,7 @@ body {
 COMPONENTS
 =========*/
 .card {
+        // flex: 1 1 350px;
     background: #fff;
     box-shadow: 0 5px 15px hsla(233, 13%, 49%, 0.3);
     border-radius: 10px;
@@ -61,11 +62,9 @@ COMPONENTS
     }
     &__currency {
         font-size: 2.1rem;
-        // font-size: 2rem;
     }
     &__amount {
         font-size: 4rem;
-        // font-size: 3rem;
     }
     &__list {
         list-style: none;
@@ -129,7 +128,7 @@ COMPONENTS
 LAYOUT
 =========*/
 header, main {
-    width: 90%;
+    width: 85%;
     max-width: 1050px;
     text-align: center;
 }
@@ -141,7 +140,6 @@ header {
 main {
     display: flex;
     flex-direction: column;
-    align-items: center;
     row-gap: 2em;
 }
 
@@ -158,6 +156,7 @@ DESKTOP
 
     main {
         flex-direction: row;
+        align-items: center;
     }
 
     .card {
